--- a/index.html
+++ b/index.html
@@ -6,248 +6,60 @@
     <title>LMG AI | KI-Lernassistent</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: "Inter", "Segoe UI", system-ui, sans-serif;
-}
+<body>
+    <div class="container">
+        <!-- Header -->
+        <header class="header">
+            <button id="clearButton" class="clear-button" title="Chatverlauf löschen">✕</button>
+            <a href="about.html" class="about-button" title="Über diese KI">ℹ</a>
+            <img src="LMG.png" alt="LMG Logo" class="logo">
+            <h1>LMG AI</h1>
+            <p>Dein KI-gestützter Lernbegleiter</p>
+        </header>
 
-body {
-    background: linear-gradient(135deg, #eef2ff, #f8fafc);
-    color: #1f2933;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+        <!-- Chat Container -->
+        <div class="chat-container">
+            <!-- Messages Area -->
+            <div id="messages" class="messages">
+                <div class="message assistant">
+                    <div class="message-content">
+                        <p>Hallo, ich bin die hausinterne künstliche Intelligenz des Leibniz-Montessori-Gymnasiums. Wie kann ich dir helfen?</p>
+                    </div>
+                    <span class="timestamp" id="initial-time"></span>
+                </div>
+            </div>
 
-/* =====================
-   Container
-===================== */
-.container {
-    width: 100%;
-    max-width: 900px;
-    background: #ffffff;
-    border-radius: 16px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.12);
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
+            <!-- Loading Indicator -->
+            <div id="loading" class="loading" style="display: none;">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
 
-/* =====================
-   Header
-===================== */
-.header {
-    position: relative;
-    text-align: center;
-    padding: 24px 20px;
-    background: linear-gradient(135deg, #4f46e5, #6366f1);
-    color: #ffffff;
-}
+            <!-- Input Area -->
+            <div class="input-area">
+                <input
+                    type="text"
+                    id="userInput"
+                    placeholder="Stelle eine Frage oder sende eine Aufgabe..."
+                    autocomplete="off"
+                    maxlength="250"
+                >
+                <button id="sendButton">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                        <path d="M2 10L18 2L10 18L9 11L2 10Z" fill="currentColor"/>
+                    </svg>
+                    Senden
+                </button>
+            </div>
+        </div>
 
-.header h1 {
-    font-size: 2rem;
-    font-weight: 700;
-}
+        <!-- Footer -->
+        <footer class="footer">
+            <p>&nbsp;</p>
+        </footer>
+    </div>
 
-.header p {
-    opacity: 0.9;
-    margin-top: 6px;
-    font-size: 0.95rem;
-}
-
-.logo {
-    width: 64px;
-    height: auto;
-    margin-bottom: 10px;
-}
-
-/* Header Buttons */
-.clear-button,
-.about-button {
-    position: absolute;
-    top: 16px;
-    background: rgba(255, 255, 255, 0.15);
-    border: none;
-    color: white;
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 18px;
-    transition: background 0.2s ease;
-}
-
-.clear-button:hover,
-.about-button:hover {
-    background: rgba(255, 255, 255, 0.3);
-}
-
-.clear-button {
-    left: 16px;
-}
-
-.about-button {
-    right: 16px;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* =====================
-   Chat Container
-===================== */
-.chat-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    background: #f9fafb;
-}
-
-/* =====================
-   Messages
-===================== */
-.messages {
-    flex: 1;
-    padding: 24px;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-}
-
-/* Message Base */
-.message {
-    max-width: 75%;
-    line-height: 1.5;
-    font-size: 0.95rem;
-}
-
-.message-content {
-    padding: 14px 18px;
-    border-radius: 14px;
-    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
-}
-
-/* Assistant */
-.message.assistant {
-    align-self: flex-start;
-}
-
-.message.assistant .message-content {
-    background: #ffffff;
-    color: #1f2933;
-    border-left: 4px solid #6366f1;
-}
-
-/* User */
-.message.user {
-    align-self: flex-end;
-}
-
-.message.user .message-content {
-    background: linear-gradient(135deg, #4f46e5, #6366f1);
-    color: #ffffff;
-}
-
-/* Timestamp */
-.timestamp {
-    font-size: 0.7rem;
-    opacity: 0.6;
-    margin-top: 4px;
-}
-
-/* =====================
-   Loading Indicator
-===================== */
-.loading {
-    display: flex;
-    justify-content: center;
-    padding: 12px;
-    gap: 6px;
-}
-
-.loading span {
-    width: 8px;
-    height: 8px;
-    background: #6366f1;
-    border-radius: 50%;
-    animation: bounce 1.4s infinite ease-in-out both;
-}
-
-.loading span:nth-child(2) {
-    animation-delay: 0.2s;
-}
-
-.loading span:nth-child(3) {
-    animation-delay: 0.4s;
-}
-
-@keyframes bounce {
-    0%, 80%, 100% {
-        transform: scale(0);
-    }
-    40% {
-        transform: scale(1);
-    }
-}
-
-/* =====================
-   Input Area
-===================== */
-.input-area {
-    display: flex;
-    gap: 12px;
-    padding: 16px;
-    background: #ffffff;
-    border-top: 1px solid #e5e7eb;
-}
-
-.input-area input {
-    flex: 1;
-    padding: 14px 16px;
-    border-radius: 10px;
-    border: 1px solid #d1d5db;
-    font-size: 0.95rem;
-    transition: border 0.2s ease, box-shadow 0.2s ease;
-}
-
-.input-area input:focus {
-    outline: none;
-    border-color: #6366f1;
-    box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.2);
-}
-
-.input-area button {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    padding: 0 18px;
-    background: linear-gradient(135deg, #4f46e5, #6366f1);
-    color: #ffffff;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-weight: 600;
-    transition: transform 0.15s ease, box-shadow 0.15s ease;
-}
-
-.input-area button:hover {
-    transform: translateY(-1px);
-    box-shadow: 0 6px 16px rgba(79, 70, 229, 0.4);
-}
-
-/* =====================
-   Footer
-===================== */
-.footer {
-    text-align: center;
-    padding: 10px;
-    font-size: 0.75rem;
-    color: #6b7280;
-}
-
+    <script src="script.js"></script>
+</body>
 </html>
