--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="messages" class="messages">
                 <div class="message assistant">
                     <div class="message-content">
-                        <p>Hallo, ich bin die hausinterne künstliche Intelligenz des Leibniz-Montessori-Gymnasiums. Wie kann ich dir helfen?</p>
+                        <p>Hallo, ich bin die hausinterne künstliche Intelligenz des Leibniz-Montessori-Gymnasiums. Ich helfe Schülerinnen und Schülern beim Lernen und beantworte Eltern alle Fragen zur Schule. Wie kann ich helfen?</p>
                     </div>
                     <span class="timestamp" id="initial-time"></span>
                 </div>
