--- a/about.html
+++ b/about.html
@@ -22,45 +22,32 @@
                 <div class="capabilities-section">
                     <h3>Fähigkeiten dieser KI</h3>
 
-                    <div class="capability-item">
-                        <span class="capability-icon">📚</span>
-                        <div class="capability-text">
+                    <ul class="capabilities-list">
+                        <li>
                             <strong>Lernunterstützung</strong>
-                            <p>Erklärungen, Schritt-für-Schritt Hilfe, Beispiele</p>
-                        </div>
-                    </div>
+                            <p>Erklärungen, Schritt-für-Schritt Hilfe, Differenzierung</p>
+                        </li>
 
-                    <div class="capability-item">
-                        <span class="capability-icon">✓</span>
-                        <div class="capability-text">
+                        <li>
                             <strong>Lernkontrolle</strong>
                             <p>Lösungen überprüfen, Feedback, Verbesserungen</p>
-                        </div>
-                    </div>
+                        </li>
 
-                    <div class="capability-item">
-                        <span class="capability-icon">🎯</span>
-                        <div class="capability-text">
+                        <li>
                             <strong>Individuelle Förderung</strong>
-                            <p>Anpassung ans Niveau, Zusatzaufgaben, Motivation</p>
-                        </div>
-                    </div>
+                            <p>Kreative Zusatzaufgaben, Motivationsförderung</p>
+                        </li>
 
-                    <div class="capability-item">
-                        <span class="capability-icon">🏫</span>
-                        <div class="capability-text">
+                        <li>
                             <strong>LMG-spezifisch</strong>
-                            <p>Module Klasse 5-10, Fächer, Orientierung</p>
-                        </div>
-                    </div>
+                            <p>Kennt alle Module Klasse 5-10 und Curricula</p>
+                        </li>
 
-                    <div class="capability-item">
-                        <span class="capability-icon">👨‍👩‍👧‍👦</span>
-                        <div class="capability-text">
+                        <li>
                             <strong>Für Eltern</strong>
-                            <p>Informationen zum Schulsystem, Modulen, Lernfortschritt</p>
-                        </div>
-                    </div>
+                            <p>Informationen zum Schulsystem, Nachteilsausgleichen etc.</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
